--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,25 @@
 # Created by .ignore support plugin (hsz.mobi)
 .gradle
+/.idea/inspectionProfiles
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/libraries
+/.idea/libraries/Gradle__junit_junit_4_12.xml
+/.idea/libraries/Gradle__org_codehaus_groovy_groovy_all_2_3_11.xml
+/.idea/libraries/Gradle__org_hamcrest_hamcrest_core_1_3.xml
+/.idea/modules
+/.idea/modules/weiyuan.iml
+/.idea/modules/weiyuan_main.iml
+/.idea/modules/weiyuan_test.iml
+/.idea/.name
+/.idea/compiler.xml
+/.idea/gradle.xml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/vcs.xml
+/.idea/workspace.xml
+
+
+
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
