--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,12 @@
-group 'com'
+group 'com.ape'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'groovy'
 apply plugin: 'java'
 
+
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
