--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,10 @@
+buildscript {
+    repositories {
+        mavenLocal()()
+        jcenter()
+    }
+}
+
 group 'com.ape'
 version '1.0-SNAPSHOT'
 
@@ -9,10 +16,25 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+    //本地库，local repository(${user.home}/.m2/repository)
+    mavenLocal()()
+
 }
 
+// 依赖
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.3.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+publishing {
+    publications {
+        clientJava(MavenPublication) {
+            artifactId clientpackagename
+            artifact clientJar
+        }
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
 }
